--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
     "@testing-library/react": "11.2.5",
     "@testing-library/user-event": "12.6.2",
     "chalk": "4.1.0",
+    "js-cookie": "3.0.1",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "react-icons": "4.2.0",
+    "react-router-dom": "5.3.0",
+    "styled-components": "5.3.1"
   },
   "devDependencies": {
     "eslint-config-airbnb": "18.2.1",
