--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-dom": "17.0.1",
     "react-icons": "4.2.0",
     "react-router-dom": "5.3.0",
-    "styled-components": "5.3.1"
+    "styled-components": "5.3.1",
+    "uuid": "8.3.2"
   },
   "devDependencies": {
     "eslint-config-airbnb": "18.2.1",
