--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react-dom": "17.0.1",
     "react-icons": "4.2.0",
     "react-router-dom": "5.3.0",
+    "react-slick": "0.28.1",
+    "slick-carousel": "1.8.1",
     "styled-components": "5.3.1",
     "uuid": "8.3.2"
   },
